# sediman-agent

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTRIBUTING.md  CRITICAL_ISSUES_FIXED.md  Cargo.toml  DEBUG_BROWSER_PANEL.md  DESIGN_UPDATE_SUMMARY.md  Dockerfile  GUARANTEED_BROWSER_PANEL.tsx  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  SECURITY.md  STREAMING_IMPROVEMENTS_SUMMARY.md  TESTING_SUMMARY.md  TUI_STREAMING_IMPROVEMENTS_SUMMARY.md  docker-compose.yml  install  package-lock.json  package.json  pyproject.toml  stop.sh
.github/: COMMUNITY.md
.github/workflows/: ci.yml  release.yml
app/: components.json  jest.config.js  package-lock.json  package.json
app/electron/: main.cjs  preload.cjs
app/src/: App.tsx  electron.d.ts  global.d.ts  main.tsx
app/src/errors/: agent.ts  base.ts  index.ts  network.ts  rpc.ts  validation.ts
app/src/hooks/: index.ts  useAgent.ts  useMemory.ts  useSkills.ts
app/src/services/: AgentService.ts  BrowserService.ts  MemoryService.ts  SandboxService.ts  SkillsService.ts  chatService.ts  index.ts  rpcClient.ts  types.ts
app/src/stores/: useAppStore.ts  useSandboxStore.ts
app/src/styles/: components.css  design-system.ts  index.css  opencode.css  tokens.css
app/src/tests/: setup.ts  ui.test.tsx
app/src/types/: api.ts  chat.ts  electron.d.ts  index.ts
app/src/utils/: EventEmitter.ts
awesome-sediman-skills/: README.md
benchmarks/: benchmark_agent_performance.py  benchmark_results.json
crates/sediman-tui/: Cargo.toml
crates/sediman-tui-bridge/src/: agent.rs  client.rs  lib.rs
crates/sediman-tui-core/: Cargo.toml
crates/sediman-tui/src/: app.rs  config.rs  gpu_app.rs  logging.rs  main.rs  permission.rs  update.rs
crates/sediman-tui/src/commands/: checkpoint.rs  connect.rs  doctor.rs  hub.rs  integration.rs  memory.rs  misc.rs  mod.rs  model.rs  provider.rs  sessions.rs  system.rs  terminator.rs  theming.rs
crates/sediman-tui/src/update/: mod.rs
crates/sediman-tui/src/update/handlers/: agent.rs  command.rs  editor.rs
crates/sediman-tui/src/update/modals/: api_key_prompt.rs  doctor.rs  memory_editor.rs  memory_menu.rs  mod.rs  model_picker.rs  schedule_browser.rs  session_browser.rs  skill_browser.rs  soul_editor.rs
crates/sediman-tui/src/update/modals/doctor/: tests.rs
crates/sediman-tui/src/update/util/: scroll.rs
crates/sediman-tui/src/updater/: github.rs  installer.rs  mod.rs
crates/sediman-tui/src/view/: banner.rs  completion.rs  input.rs  messages.rs  mod.rs  modals.rs  sidebar.rs  status_bar.rs  title_bar.rs
crates/sediman-tui/tests/: comprehensive_tests.rs
docs/: CHANGELOG.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  architecture.md  docker-compose.example.yml
docs/awesome-skills/: README.md
scripts/: dev.cjs  import_clawskills.py  install.sh  uninstall.sh
skills/: index.json  skill_embeddings.npz  skill_embeddings_meta.json
skills/data/: index.json  skill_embeddings.npz  skill_embeddings_meta.json
src/sediman/: auth.py  cli.py  config.py  rpc_server.py  types.py
tests/: conftest.py  test_agent_delegate.py  test_agent_tools.py  test_agentbrowser_client.py  test_agentbrowser_process.py  test_agentbrowser_session.py  test_agentbrowser_subagent.py  test_auth.py  test_db_edge_cases.py  test_discord_telegram_bidirectional.py  test_file_memory_strategy.py  test_llm_provider.py  test_loop_modules.py  test_manager_coding.py  test_memory_strategy.py  test_post_task_handler.py  test_sandbox_runner.py  test_skills_engine_extended.py  test_tool_loop.py  test_web_search_strategy.py
tests/subagents/: test_session.py
(+176 files in other folders)
