[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openskynet"
version = "0.3.13"
description = "A self-improving browser agent that runs 24/7"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
keywords = [
    "browser-automation",
    "ai-agent",
    "playwright",
    "web-scraping",
    "rpa",
    "browser-agent",
    "self-healing",
    "skill-learning",
    "cron-scheduling",
    "chromium",
    "headless-browser",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "browser-use>=0.2.0",
    "playwright>=1.40.0",
    "openai>=1.30.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.0",
    "markdownify>=0.12.0",
    "lxml>=5.0.0",
    "scikit-learn>=1.3.0",
    "cloakbrowser>=0.3.0",
    "discord-py>=2.3.0",
    "python-telegram-bot>=21.0",
    "sentry-sdk>=2.0.0",
    "slack-sdk>=3.42.0",
    "pywa>=3.9.0",
    "lark-oapi>=1.6.8",
    "python-magic>=0.4.27",
    "opensandbox>=0.1.9",
]

[project.scripts]
sediman = "sediman.cli:main"

[project.urls]
Homepage = "https://sediman.ai"
Repository = "https://github.com/sediman-agent/OpenSkynet"
Documentation = "https://github.com/sediman-agent/OpenSkynet#readme"
Changelog = "https://github.com/sediman-agent/OpenSkynet/blob/main/docs/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sediman = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt", "**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
